# stonks

./: Cargo.toml  README.md  todo.md
benches/: bench.rs
src/: cli.rs  client.rs  lib.rs  main.rs  parse.rs  utils.rs
